--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -16,6 +16,185 @@
   <div class="deal_btn"><a target="_blank" href="product_link">Shop Now at Amazon</a></div>
 </div> -->
 
+<div class="card clearfix" data-score="51" data-price="49.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FtpbXe"><img src="https://images-na.ssl-images-amazon.com/images/I/61SkmVIQ17L._SX522_.jpg" alt="Canary View Indoor 1080p HD Security Camera" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>733 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FtpbXe">Canary View Indoor 1080p HD Security Camera with Wide-angle Lens, Motion/Person Alerts, Works with Alexa, Pets/Elder/Baby Monitoring, ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$49.00</span><span class="ori_price">$99.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FtpbXe">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="54" data-price="23.10">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FvzxpM"><img src="https://images-na.ssl-images-amazon.com/images/I/91rmyLNoyUL._SX679_.jpg" alt="Targus VersaVu Classic Rotating Case" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,923 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>54% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FvzxpM">Targus VersaVu Classic Rotating Case and Stand for 9.7-Inch iPad Pro, Black (THZ634GL)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$23.10</span><span class="ori_price">$49.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FvzxpM">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="58" data-price="42.21">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X3aoxh"><img src="https://images-na.ssl-images-amazon.com/images/I/71-y8ssSwwL._SY879_.jpg" alt="Sphero Orbotix 1B01RW1 Ollie App-Controlled Robot" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>347 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>58% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X3aoxh">Sphero Orbotix 1B01RW1 Ollie App-Controlled Robot</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$42.21</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X3aoxh">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IZbiRE"><img src="https://images-na.ssl-images-amazon.com/images/I/81JhdEkrFIL._SX522_.jpg" alt="Coca-Cola Pop-Up Hot Dog Toaster" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>410 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IZbiRE">Nostalgia HDT600COKE Coca-Cola Pop-Up Hot Dog Toaster</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$16.99</span><span class="ori_price">$18.97</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IZbiRE">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y6zKab"><img src="https://images-na.ssl-images-amazon.com/images/I/31N10TNFEWL.jpg" alt="Hamilton Beach 727B Classic DrinkMaster Drink Mixer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,260 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y6zKab">Hamilton Beach 727B Classic DrinkMaster Drink Mixer, White</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.99</span><span class="ori_price">$45.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y6zKab">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="37" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XxexJj"><img src="https://images-na.ssl-images-amazon.com/images/I/71Gun4v3-aL._SX679_.jpg" alt="VICSEED Car Phone Mount" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>661 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>37% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XxexJj">VICSEED Car Phone Mount, Air Vent Phone Holder for Car, Handsfree Cell Phone Car Mount Compatible iPhone XR Xs Max Xs X 8 7 6 Plus,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$16.99</span><span class="ori_price">$26.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XxexJj">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="31" data-price="89.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xu3qRl"><img src="https://images-na.ssl-images-amazon.com/images/I/61vbm%2BICJzL._SX522_.jpg" alt="40Mins Flight Time Drone" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>133 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>31% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xu3qRl">40Mins Flight Time Drone, JJRC H68 RC Drone with 720P HD Camera Live Video FPV Quadcopter with Headless Mode, Altitude Hold Helicopter with 2 Batteries...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$89.99</span><span class="ori_price">$129.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xu3qRl">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WUug0F"><img src="https://images-na.ssl-images-amazon.com/images/I/71oGCQwB4TL._SX679_.jpg" alt="Sunbeam Wide Slot 4-Slice Toaster" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>372 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WUug0F">Sunbeam Wide Slot 4-Slice Toaster, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$24.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WUug0F">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="22" data-price="156.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J5WnF9"><img src="https://images-na.ssl-images-amazon.com/images/I/61EZoHIaE2L._SX522_.jpg" alt="CoolerZ Tropical Breeze Inflatable Floating Island" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>264 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>22% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J5WnF9">CoolerZ Tropical Breeze Inflatable Floating Island</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$156.59</span><span class="ori_price">$199.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J5WnF9">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="9.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y4wj3v"><img src="https://images-na.ssl-images-amazon.com/images/I/81-hV4LfezL._SX522_.jpg" alt="Sequence Game" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>2,678 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y4wj3v">Sequence Game</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$9.97</span><span class="ori_price">$24.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y4wj3v">Shop Now at Amazon</a></div>
+</div>
 
 <div class="card dealofday clearfix" data-score="26" data-price="discounted_price">
   <div class="image_box">
