--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -25,6 +25,92 @@
  <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
 -->
 
+<div class="card clearfix" data-score="30" data-price="32.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X0IkWu"><img src="https://m.media-amazon.com/images/I/717dHX59KxL._SR400,400_.jpg" alt="Electric Skillet Non Stick Electric Frying Pan" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>24 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X0IkWu">Electric Skillet Non Stick Electric Frying Pan, 12 Inch Electric Deep Skillet with Standing Glass Lid, Heat Resistant Handles and Dishwasher Safe, Tibek</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$32.19</span><span class="ori_price">$45.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>30% off at $45.99</strong> with promo code: <strong>30ZVQD2G</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 28, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X0IkWu">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="10.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X0OiGM"><img src="https://m.media-amazon.com/images/I/71FpDByeTvL._SR400,400_.jpg" alt="Hiking Backpack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>43 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X0OiGM">Famebird Durable Lightweight Packable Hiking Backpack 25L Small Water Resistant Travel Daypack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.79</span><span class="ori_price">$17.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>40% off at $17.99</strong> with promo code: <strong>40VL24NS</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 22, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X0OiGM">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="10.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X3iYHK"><img src="https://images-na.ssl-images-amazon.com/images/I/811yLB7%2BmlL._SX679_.jpg" alt="Sprinkle & Splash Play Mat" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>53 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X3iYHK">Sprinkle & Splash Play Mat - 68" Water Sprinkler, Kiddie Outdoor Outside Water Pool Toys for Toddlers Kids Children Infants Boys and Girls...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.99</span><span class="ori_price">$21.99</span></address>
+      <p><span>Take <strong>50% off at $21.99</strong> with promo code: <strong>506Y36RE</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 26, 2019 at 09:00 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X3iYHK">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="25.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y7vhnA"><img src="https://m.media-amazon.com/images/I/41cnjNcB+LL._SR400,400_.jpg" alt="JIECAN Amphibious RC Stunt Car" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>17 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y7vhnA">JIECAN Amphibious RC Stunt Car 2.4Ghz - 4WD Water and Land Remote Control Boat Truck Monster Double Sided Rotate, 360 Degree Spinning and...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.00</span><span class="ori_price">$49.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $49.99</strong> with promo code: <strong>50OTE2RV</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 23, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y7vhnA">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="15" data-price="13.59">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2xb1JJU"><img src="https://m.media-amazon.com/images/I/51UHjCggkwL._SR400,400_.jpg" alt="Case for iPhone XS Max" /></a>
