--- a/app/views/deals_days/day_07.html.erb
+++ b/app/views/deals_days/day_07.html.erb
@@ -24,6 +24,7 @@
           </div>
           
           <div class="card_wrap sort-list">
+            <%= render 'shared/amz_search' %>
             <%= render 'deals_days/day_07' %>
           </div>
           <p class="updating"><a href="/deals/bestdeals">GO TO TODAY'S THE BEST DEALS</a></h2>
