--- a/app/views/promocodes_days/day_02.html.erb
+++ b/app/views/promocodes_days/day_02.html.erb
@@ -11,7 +11,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-        <h2>Promotion Code We Picked On Amazon Jun. 16. 2019</h2>
+        <h2>Promotion Code We Picked On Amazon Jun. 23. 2019</h2>
           
           <div class="sort_box clearfix">
             <ul>
@@ -24,6 +24,7 @@
           </div>
          
           <div class="card_wrap sort-list">
+            <%= render 'shared/amz_search' %>
             <%= render 'promocodes_days/day_02' %>
           </div>
           <p class="updating"><a href="/deals/promo_codes">GO TO TODAY'S PROMO CODES</a></h2>
