--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -54,7 +54,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>The Best Deals We've Picked On Amazon Jun. 23. 2019.<!-- <em>We pick the best deals from all categories of Amazon!! We just hope you like it :D</em> --></h2>
+        <h2>The Best Deals We've Picked On Amazon Jun. 24. 2019.<!-- <em>We pick the best deals from all categories of Amazon!! We just hope you like it :D</em> --></h2>
         
         <div class="sort_box clearfix">
           <ul>
@@ -67,16 +67,10 @@
         </div>
         
         <div class="card_wrap sort-list">
-          <div class="amz_search">
-            <script type="text/javascript">amzn_assoc_placement = "adunit0";amzn_assoc_tracking_id = "3628-20";amzn_assoc_ad_mode = "search";amzn_assoc_ad_type = "smart";amzn_assoc_marketplace = "amazon";amzn_assoc_region = "US";amzn_assoc_default_search_phrase = "";amzn_assoc_default_category = "All";
-              amzn_assoc_linkid = "0080e330fc88b2ef23076ea8db0c186b";amzn_assoc_rows = "1";amzn_assoc_search_bar = "true";amzn_assoc_search_bar_position = "top";
-             </script>
-             <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
-          </div>
-          
+          <%= render 'shared/amz_search' %>
           <%= render 'deals/body_bestdeals' %>
         </div>
-        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_03">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
+        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_05">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
         
         
       </div><!--./rt_cnt-->    
