--- a/app/views/deals_days/day_05.html.erb
+++ b/app/views/deals_days/day_05.html.erb
@@ -11,7 +11,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Best Deals We Picked On Amazon Jun. 16. 2019</h2>
+          <h2>Best Deals We Picked On Amazon Jun. 23. 2019</h2>
           
           <div class="sort_box clearfix">
             <ul>
@@ -24,6 +24,7 @@
           </div>
           
           <div class="card_wrap sort-list">
+            <%= render 'shared/amz_search' %>
             <%= render 'deals_days/day_05' %>
           </div>
           <p class="updating"><a href="/deals/bestdeals">GO TO TODAY'S THE BEST DEALS</a></h2>
