--- a/app/views/promocodes_days/day_07.html.erb
+++ b/app/views/promocodes_days/day_07.html.erb
@@ -24,6 +24,7 @@
           </div>
           
           <div class="card_wrap sort-list">
+            <%= render 'shared/amz_search' %>
             <%= render 'promocodes_days/day_07' %>
           </div>
           <p class="updating"><a href="/deals/promo_codes">GO TO TODAY'S PROMO CODES</a></h2>
