--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -45,6 +45,222 @@
 <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
 -->
 
+<div class="card clearfix" data-score="53" data-price="210.91">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XzzSli"><img src="https://images-na.ssl-images-amazon.com/images/I/610CbKCP1ML._SX679_.jpg" alt="AXESS TVD1801-32 32-Inch LED HDTV" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>766 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XzzSli">AXESS TVD1801-32 32-Inch LED HDTV, Features VGA/HDMI/SD/USB Inputs, Built-In DVD Player, Full Function Remote</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$210.91</span><span class="ori_price">$449.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XzzSli">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="126.09">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y7KUex"><img src="https://images-na.ssl-images-amazon.com/images/I/71a3Q4dMnTL._SY879_.jpg" alt="Vanguard VEO 2 235CB Carbon Fiber Travel Tripod" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>75 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y7KUex">Vanguard VEO 2 235CB Carbon Fiber Travel Tripod with VEO 2 BH-50 Ball Head for Sony, Nikon, Canon, Fujifilm Mirrorless, Compact System Camera (CSC), DSLR</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$126.09</span><span class="ori_price">$249.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y7KUex">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="8.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y9NhOf"><img src="https://images-na.ssl-images-amazon.com/images/I/71ysmsMi43L._SX522_.jpg" alt="" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>3,013 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y9NhOf">European Adapter Plug, OREI Travel Adaptor for Europe Schuko Countries 2 in 1, for Germany France Iceland Netherlands Russa Greece Spain...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$8.99</span><span class="ori_price">$19.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y9NhOf">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="13" data-price="129.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XsW0Ol"><img src="https://images-na.ssl-images-amazon.com/images/I/71kRmF5Q7IL._SX522_.jpg" alt="ZAGG Rugged Book" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>4 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>13% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XsW0Ol">ZAGG Rugged Book - Durable Case and Bluetooth Keyboard for Apple iPad (Lastest Model), iPad 5th Gen, 9.7-Inch iPad Pro, iPad Air 2 and iPad Air- Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$129.99</span><span class="ori_price">$149.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XsW0Ol">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="62" data-price="30.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YjyC2M"><img src="https://images-na.ssl-images-amazon.com/images/I/61PNFhmtKbL._SX679_.jpg" alt="Belkin N600 Wireless Dual-Band N+ Router" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>2,472 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>62% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YjyC2M">Belkin N600 Wireless Dual-Band N+ Router (Latest Generation)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$30.00</span><span class="ori_price">$79.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YjyC2M">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="79" data-price="21.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y8srih"><img src="https://images-na.ssl-images-amazon.com/images/I/71HqeMw-nWL._SX679_.jpg" alt="Samsung Level Active Wireless Bluetooth" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>230 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>79% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y8srih">Samsung Level Active Wireless Bluetooth Fitness Earbuds - Black (US Version with Warranty)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$21.49</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y8srih">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="59" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X5dXDh"><img src="https://images-na.ssl-images-amazon.com/images/I/61L0YKX2V8L._SX679_.jpg" alt=" Training Time Clock" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>150 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>59% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X5dXDh">Body-Solid STT45 Strength Training Time Clock,Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$48.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X5dXDh">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XtgyWP"><img src="https://images-na.ssl-images-amazon.com/images/I/71OBplpFauL._SX522_.jpg" alt="Tablet Wall Mount" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>31 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XtgyWP">CTA Digital PAD-ATWM Articulating Tablet Wall Mount</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.99</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XtgyWP">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="56" data-price="48.52">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y6KHbE"><img src="https://images-na.ssl-images-amazon.com/images/I/51RYN2GFBjL._SX522_.jpg" alt="Lacquer Selectip Rollerball Pen" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>348 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>56% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y6KHbE">Cross Century II Black Lacquer Selectip Rollerball Pen with 23KT Gold-Plated Appointments</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$48.52</span><span class="ori_price">$110.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y6KHbE">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="64" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WZbf1Y"><img src="https://images-na.ssl-images-amazon.com/images/I/81TTUPZWacL._SX679_.jpg" alt="SanDisk 128GB Extreme microSDXC" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,129 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>64% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WZbf1Y">SanDisk 128GB Extreme microSDXC UHS-I Memory Card with Adapter - C10, U3, V30, 4K, A2, Micro SD - SDSQXA1-128G-GN6MA</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$24.99</span><span class="ori_price">$68.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WZbf1Y">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="31.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FoQVMP"><img src="https://images-na.ssl-images-amazon.com/images/I/71lprXHznaL._SX679_.jpg" alt="FosPower Emergency Solar Hand Crank Portable Radio" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>196 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FoQVMP">FosPower Emergency Solar Hand Crank Portable Radio, NOAA Weather Radio for Household and Outdoor Emergency with AM/FM, LED Flashlight, Reading Lamp,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$31.99</span><span class="ori_price">$39.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FoQVMP">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="39" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FxRZOy"><img src="https://images-na.ssl-images-amazon.com/images/I/717DZUBqHcL._SX522_.jpg" alt="Febreze" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>126 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>39% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FxRZOy">Febreze AIR Effects Air Freshener Linen & Sky, 8.8 oz (Pack of 6) </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.99</span><span class="ori_price">$19.74</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FxRZOy">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card dealofday clearfix" data-score="60" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2FtYLVc"><img src="https://images-na.ssl-images-amazon.com/images/I/81Yd-xXWdcL._SX522_.jpg" alt="Amazon Deal Of The Day" /></a>
